# skyway_webrtc_gateway_caller

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  test.yml
docs/figures/: drawio.xml
examples/: data_callee.rs  data_caller.rs  data_connect.rs  media_caller.rs  meida_callee.rs
examples/common/: data.rs  media.rs  mod.rs  peer.rs  terminal.rs
src/: di.rs  error.rs  lib.rs  prelude.rs  presentation.rs
src/application/: dto.rs  mod.rs
src/application/usecase/: factory.rs  mod.rs  service.rs  value_object.rs
src/application/usecase/data/: connect.rs  create.rs  delete.rs  disconnect.rs  event.rs  mod.rs  redirect.rs  status.rs
src/application/usecase/media/: answer.rs  call.rs  create_media.rs  create_rtcp.rs  delete_media.rs  delete_rtcp.rs  disconnect.rs  event.rs  mod.rs  status.rs
src/application/usecase/peer/: create.rs  delete.rs  event.rs  mod.rs  status.rs
src/domain/: mod.rs  utility.rs
src/domain/common/: value_object.rs
src/domain/data/: service.rs  value_object.rs
src/domain/media/: service.rs  value_object.rs
src/domain/peer/: repository.rs  service.rs  value_object.rs
src/domain/state/: mod.rs
src/domain/webrtc/: mod.rs
src/domain/webrtc/common/: mod.rs  value_object.rs
src/domain/webrtc/data/: entity.rs  mod.rs  repository.rs  service.rs  value_object.rs
src/domain/webrtc/media/: entity.rs  mod.rs  repository.rs  service.rs  value_object.rs
src/domain/webrtc/peer/: entity.rs  mod.rs  repository.rs  service.rs  value_object.rs
src/domain/webrtc/peer_refactor/: mod.rs  repository.rs  value_object.rs
src/infra/: data.rs  media.rs  mod.rs  peer.rs  utility.rs
src/infra/state/: mod.rs
src/infra/webrtc/: data.rs  media.rs  mod.rs  peer.rs  peer_refactor.rs
src/usecase/: create_peer.rs  delete_peer.rs  mod.rs  peer_event.rs  service.rs
src/usecase/peer/: create.rs  delete.rs  event.rs  mod.rs
tests/: content_sockets.rs  create_peer.rs  invalid_url.rs
