[package]
name = "skyway-webrtc-gateway-caller"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]
edition = "2018"
license = "MIT"
description = "Easy crate for SkyWay WebRTC Gateway"
repository = "https://github.com/nakakura/skyway_webrtc_gateway_caller"
readme = "README.md"
keywords = ["skyway", "webrtc", "gateway", "rtp"]
documentation = "https://docs.rs/skyway-webrtc-gateway-caller"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1.58"
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", default-features = false, features = ["alloc"] }
shaku = "0.6.1"
skyway-webrtc-gateway-api = "0.1.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"

[dev-dependencies]
mockall = "0.11.3"
mockall_double = "0.3.0"
mockito = "0.31.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.12", features = ["json"] }

[[example]]
name = "data_caller"
path = "examples/data_caller.rs"

[[example]]
name = "data_callee"
path = "examples/data_callee.rs"

[[example]]
name = "media_caller"
path = "examples/media_caller.rs"

[[example]]
name = "media_callee"
path = "examples/meida_callee.rs"

